# brazilfi

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/brazilfi/: __init__.py  cli.py
src/brazilfi/core/: __init__.py  exceptions.py  http_client.py  models.py
src/brazilfi/providers/: __init__.py  b3.py  bacen.py  ibge.py  tesouro.py
tests/: test_b3.py  test_bacen.py  test_cli.py  test_ibge.py  test_tesouro.py
